monticore-generator/src/test/resources/cocos/invalid/A4014/A4014.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4014;

grammar A4014 {
  enum A = "a" | "a";

}
